Implemented comprehensive allocation management system, including allocation generation for all PRD phases (Functional Design, Technical Design, SIT, BUILD, UAT, Smoke). Added allocation factor validation and enhanced skill function matching. Integrated resource and release deletion validation to prevent deletion of entities with active allocations. Updated project status documentation to reflect completion of BE Phase 6. All backend tests passing (246/246, 100% success rate).